# ai-study-buddy

./: answer.py  app.py  ingest.py  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
chroma_db/aad562f9-30d2-45fe-a840-01156f06b74d/: index_metadata.pickle
