[project]
name = "healthcare-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "dotenv>=0.9.9",
    "gradio>=6.12.0",
    "groq>=0.30.0,<1.0.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-groq>=1.0.0",
    "pydantic>=2.13.0",
    "pypdf>=6.10.1",
    "python-docx>=1.2.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]
